--- a/data/localisation/es.csv
+++ b/data/localisation/es.csv
@@ -13,15 +13,15 @@
 "option_menu_keybind","Keybind"
 "option_menu_default","Default"
 "save_button","Save"
-"delete_button","Delete"
-"start_button","Start"
-"confirm_button","Confirm"
+"delete_button","Borrar"
+"start_button","Comenzar"
+"confirm_button","Confirmar"
 "cancel_button","Cancel"
 "close_button","Close"
 "authority","Authority"
 "option_full_screen","Full Screen"
 "option_master_volume","Master Volume"
-"option_music_volume","Music Volume"
+"option_music_volume","Volumen de la Música"
 "option_voice_volume","Voice Volume"
 "option_effect_volume","Effect Volume"
 "option_display_resolution","Display Resolution"
@@ -49,11 +49,11 @@
 "Intelligence","Intelligence"
 "Wisdom","Wisdom"
 "Charisma","Charisma"
-"Size","Size"
-"Name","Name"
-"Grade","Grade"
+"Size","Tamaño"
+"Name","Nombre"
+"Grade","Calificación"
 "Race","Race"
-"Trait","Trait"
+"Trait","Rasgo"
 "Skill","Skill"
 "Cost","Cost"
 "Upkeep","Upkeep"
@@ -69,7 +69,7 @@
 "Melee Speciality","Melee Speciality"
 "Range Speciality","Range Speciality"
 "Cavalry Speciality","Cavalry Speciality"
-"Ammunition","Ammunition"
+"Ammunition","Munición"
 "Weapon","Weapon"
 "Armour","Armour"
 "Mount","Mount"
