--- a/data/module/historical/localisation/en/common_leader.csv
+++ b/data/module/historical/localisation/en/common_leader.csv
@@ -1,9 +1,9 @@
 "ID","Name","Description","para1","para2","para3","para4","para5","para6","para7","para8","para9","para10","para11","para12","para13","para14","para15"
-"CSAX-1","Huscarl Captain","A captain of the fame Huscarl warriors who are one of the fiercest infantries in Europe. Loyal to the king he swear an oath to, this Huscarl captain will fight to the death along with his troop.",,,,,,,,,,,,,,,
+"CSAX-1","Huscarl Captain","A captain of the fame Saxon Huscarl warriors who are one of the fiercest infantries in Europe. Undeniably loyal to the king he swears an oath to, this Huscarl captain will fight to the death along with his troop.",,,,,,,,,,,,,,,
 "CSAX-2","Thane","Saxon thane (or thegn) is the landowner, which is considered to be a minor noble title in Saxon England. Thanes are responsible for governing their local land and raising the militia (fyrd) to respond to the call of war by their king. After the Norman invasion, William the Conqueror replace Saxon political structure with Norman's one and integrate the thane class to Norman knight class.",,,,,,,,,,,,,,,
 "CNOR-1","High Medieval Norman Noble",,,,,,,,,,,,,,,,
-"CNOR-2","High Medieval Breton Noble",,,,,,,,,,,,,,,,
-"CNOR-3","High Medieval Frankish Noble",,,,,,,,,,,,,,,,
+"CBRT-1","High Medieval Breton Noble",,,,,,,,,,,,,,,,
+"CFR-1","High Medieval Frankish Noble",,,,,,,,,,,,,,,,
 "CNK-1","Imy-rA mSa","Imy-rA mSa is a title for the overseer of the army in Ancient Egypt's military structure. They were noble who was given authority by the Pharoah to command a portion of the army. They also served as generals and military advisors to the Pharoah in military campaigns.",,,,,,,,,,,,,,,
 "CNK-2","Ur","Ur is one of the word that refer to a person of status in the Ancient Egypt language. Nobles in the Ancient Egypt society are only below the Pharoah himself and usually serve as a high ranking leader of the military.",,,,,,,,,,,,,,,
 "CCNA-1","Muru-u","Muru-u is a field commander in Canaan city state's military structure who command a contingent of infantries and chariots. Their exact role in the army is unknown since most of the records of Canaanite history are long lost.",,,,,,,,,,,,,,,
