--- a/data/module/historical/localisation/en/ui.csv
+++ b/data/module/historical/localisation/en/ui.csv
@@ -42,6 +42,8 @@
 "keybind_swap_weapon_set2","Swap Weapon Set 2"
 "keybind_toggle_run","Toggle Run"
 "keybind_auto_move","Auto Move"
+"custom_map","Custom Map"
+"random","Random"
 "Strength","Strength"
 "Agility","Agility"
 "Dexterity","Dexterity"
