--- a/data/module/historical/localisation/en/map/preset/atest/atestmap/source.csv
+++ b/data/module/historical/localisation/en/map/preset/atest/atestmap/source.csv
@@ -1,3 +1,3 @@
-"ID","Source","Number Text","Description"
-0,"Test","Some number","Test source and map."
-1,"Huge Battle","500 vs 500","Test source and map."
+"ID","Source","Description"
+0,"Test","Test source and map."
+1,"Huge Battle","Test source and map."
