--- a/data/module/historical/localisation/en/map/preset/ottoman/mohacs/source.csv
+++ b/data/module/historical/localisation/en/map/preset/ottoman/mohacs/source.csv
@@ -1,2 +1,2 @@
-"ID","Source","Number Text","Description","Camp Team 1","Camp Team 2"
-0,"Modern Historians","10,000 vs 7,000","Modern Historians, using estimation from the logistic probability and population of both England and Normandy at the time, came to the conclusion that both of the armies likely had between 7,000 to 14,000 troops each. With Harold’s army being the smaller one. The exact number is still inconclusive as each historian provides a varied number based on their reasoning.","(960,600,80);(570,600,80)","(550,200,120)"
+"ID","Source","Description"
+0,"Modern Historians","Modern Historians, using estimation from the logistic probability and population of both England and Normandy at the time, came to the conclusion that both of the armies likely had between 7,000 to 14,000 troops each. With Harold’s army being the smaller one. The exact number is still inconclusive as each historian provides a varied number based on their reasoning."
