--- a/data/module/historical/localisation/en/faction.csv
+++ b/data/module/historical/localisation/en/faction.csv
@@ -1,13 +1,17 @@
-"ID","Name","Description"
-0,"All Factions",
-1,"Duchy of Normandy",
-2,"Saxon England",
-3,"New Kingdom",
-4,"Canaan Alliance",
-5,"Ottoman Empire (Not READY)",
-6,"Kingdom of Hungary (Not READY)",
-7,"Kingdom of Poland (Not READY)",
-8,"Papal State (Not READY)",
-9,"Holy Roman Empire (Not READY)",
-10,"Kingdom of Croatia (Not READY)",
-11,"Lands of the Bohemian Crown (Not READY)",
+"ID","Name","Strengths","Weaknesses","Description"
+0,"All Factions",,,
+1,"Duchy of Normandy","Strong and well-round cavalry force.","Mediocre infantries.",
+2,"Saxon England","Superb heavy infantries.","Lack cavalry and good ranged troop.",
+3,"New Kingdom","Well-balanced army with the support from auxiliaries of variety.","Heavy armour is rarely used at all.",
+4,"Canaan Alliance","Strong chariot and numerous affordable infantries.","Undisciplined troops overall.",
+5,"Ottoman Empire","Unparalleled combination of old and new warfare in one army.","Few affordable heavily armoured troops.",
+6,"Kingdom of Hungary","Unmatched cavalries of both heavy and light.","Field only defensive infantries that require support.",
+7,"Kingdom of Poland","Good combination of infantry and cavalry forces.",,
+8,"Papal State","Disciplined and devoted infantries.","Poor choices of cavalry come only from auxiliary sources.",
+9,"Holy Roman Empire","Strong and heavy army with no glaring weakness.","Not extremely strong in any specific compartment.",
+10,"Kingdom of Croatia","Distinctive irregular light troops.","No particularly powerful heavy troops for a frontal offensive.",
+11,"Lands of the Bohemian Crown","Mobile and effective combination of infantry and artillery force.","Weak selection of cavalry force.",
+12,"Duchy of Brittany","Specialised in cavalry force and skirmish tactic.","No specialised infantry for melee combat.",
+13,"Kingdom of France","Great all-around infantries and cavalries.","No proper skirmishing cavalries and infantries.",
+14,"Kingdom of Norway","Mighty melee infantry force.","Rely entirely on melee infantries.",
+15,"European Mercenary","Versatile and expandable infantry force.","Cavalry mercenaries are a rare sight on battlefield.",
