Remance update 0.7.1.9DEV1
- Add fps display option.
- Add fps counter to menu.
- Downsize the lore information.
- Bugs fixed.

--- a/data/module/historical/localisation/en/faction.csv
+++ b/data/module/historical/localisation/en/faction.csv
@@ -1,17 +1,20 @@
-"ID","Name","Strengths","Weaknesses","Description"
-0,"All Factions",,,
-1,"Duchy of Normandy","Strong and well-round cavalry force.","Mediocre infantries.",
-2,"Saxon England","Superb heavy infantries.","Lack cavalry and good ranged troop.",
-3,"New Kingdom","Well-balanced army with the support from auxiliaries of variety.","Heavy armour is rarely used at all.",
-4,"Canaan Alliance","Strong chariot and numerous affordable infantries.","Undisciplined troops overall.",
-5,"Ottoman Empire","Unparalleled combination of old and new warfare in one army.","Few affordable heavily armoured troops.",
-6,"Kingdom of Hungary","Unmatched cavalries of both heavy and light.","Field only defensive infantries that require support.",
-7,"Kingdom of Poland","Good combination of infantry and cavalry forces.",,
-8,"Papal State","Disciplined and devoted infantries.","Poor choices of cavalry come only from auxiliary sources.",
-9,"Holy Roman Empire","Strong and heavy army with no glaring weakness.","Not extremely strong in any specific compartment.",
-10,"Kingdom of Croatia","Distinctive irregular light troops.","No particularly powerful heavy troops for a frontal offensive.",
-11,"Lands of the Bohemian Crown","Mobile and effective combination of infantry and artillery force.","Weak selection of cavalry force.",
-12,"Duchy of Brittany","Specialised in cavalry force and skirmish tactic.","No specialised infantry for melee combat.",
-13,"Kingdom of France","Great all-around infantries and cavalries.","No proper skirmishing cavalries and infantries.",
-14,"Kingdom of Norway","Mighty melee infantry force.","Rely entirely on melee infantries.",
-15,"European Mercenary","Versatile and expandable infantry force.","Cavalry mercenaries are a rare sight on battlefield.",
+"ID","Name","Strengths","Weaknesses","Favoured Troop","Description"
+0,"All Factions",,,,
+1,"Duchy of Normandy","Strong and well-round cavalry force.","Mediocre infantries.","Norman Conroi",
+2,"Saxon England","Superb heavy infantries.","Lack cavalry and good ranged troop.","Saxon Huscarl",
+3,"New Kingdom","Well-balanced army with the support from auxiliaries of variety.","Heavy armour is rarely used.","Egyptian War Chariot",
+4,"Canaan Alliance","Strong chariot and numerous affordable infantries.","Undisciplined troops overall.","Canaanite Maryannu Warrior",
+5,"Ottoman Empire","Unparalleled combination of old and new warfare in one army.","Few affordable heavily armoured troops.","Janissary Arquebusier",
+6,"Kingdom of Hungary","Unmatched cavalries of both heavy and light.","Field only defensive infantries that require support.","Hungarian Banderium",
+7,"Kingdom of Poland","Good combination of infantry and cavalry forces.",,"Polish Hussar",
+8,"Papal State","Disciplined and devoted infantries.","Poor choices of cavalry come only from auxiliary sources.","Pontifical Swiss Guard",
+9,"Holy Roman Empire","Strong and heavy army with no glaring weakness.","Not extremely strong in any specific compartment.","Landsknecht Doppelsöldner",
+10,"Kingdom of Croatia","Distinctive irregular light troops.","No particularly powerful heavy troops for a frontal offensive.","Croat",
+11,"Lands of the Bohemian Crown","Mobile and effective combination of infantry and artillery force.","Weak selection of cavalry force.","Czech War Wagon",
+12,"Duchy of Brittany","Specialised in cavalry force and skirmish tactic.","No specialised infantry for melee combat.","Breton Knight",
+13,"Kingdom of France","Great all-around infantries and cavalries.","No proper skirmishing cavalries and infantries.","Gendarme",
+14,"Kingdom of Norway","Mighty melee infantry force.","Rely entirely on melee infantries.","Norwegian Huscarl",
+15,"European Mercenary","Versatile and expandable infantry force.","Cavalry mercenaries are a rare sight on battlefield.",,
+16,"Sea Peoples","Destructive force of infantry.","Inferior cavalry selection","Sea People Raider",
+17,"Libu",,,,
+18,"Hittite Empire ",,,,
