--- a/data/module/historical/localisation/en/ui.csv
+++ b/data/module/historical/localisation/en/ui.csv
@@ -20,6 +20,7 @@
 "close_button","Close"
 "authority","Authority"
 "option_full_screen","Full Screen"
+"option_fps","Show FPS Number"
 "option_master_volume","Master Volume"
 "option_music_volume","Music Volume"
 "option_voice_volume","Voice Volume"
