--- a/data/module/historical/localisation/en/ui.csv
+++ b/data/module/historical/localisation/en/ui.csv
@@ -197,6 +197,11 @@
 "Cavalry Speed Modifier","Cavalry Speed Modifier"
 "Cavalry Melee Modifier","Cavalry Melee Modifier"
 "Range Defence Bonus","Range Defence Bonus"
+"Infantry Speed Bonus","Infantry Speed Bonus"
+"Infantry Melee Bonus","Infantry Melee Bonus"
+"Cavalry Speed Bonus","Cavalry Speed Bonus"
+"Cavalry Melee Bonus","Cavalry Melee Bonus"
+,
 ,
 ,
 "854 x 480","854 x 480"
